tests/fixtures/invalid/pow_list_none_none.py
# Cannot call pow() with List[int], None, None
x = pow([1, 2, 3], None, None)
